--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,7 +1,3 @@
-<h1>Welcome to my Awesome Web App</h1>
-
-<h1><%= @places.inspect %></h1>
-
 
 
 <% @places.each do |place| %>
@@ -14,4 +10,6 @@
   <hr />
 <% end %>
 
-<p>The first place in the list is: <%= @firstplaces.name %></p>
+
+
+Check here: <%= @places.first.name %>
