--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -1,18 +1,31 @@
 @import "bootstrap";
 
+body{
+  background: image_url('funky-lines.png');
+  font-family: Frutiger, "Frutiger Linotype", Univers, Calibri, "Gill Sans", "Gill Sans MT", "Myriad Pro", Myriad, "DejaVu Sans Condensed", "Liberation Sans", "Nimbus Sans L", Tahoma, Geneva, "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
 .booyah-box {
   -moz-box-shadow: 1px 1px 2px 0 #d0d0d0;
   -webkit-box-shadow: 1px 1px 2px 0 #d0d0d0;
   box-shadow: 1px 1px 2px 0 #d0d0d0;
-  background: #fff;
+  background: image_url('food.png');
   border: 1px solid #ccc;
   border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
   margin-top: 10px;
   margin-bottom: 15px;
   padding: 20px;
+  border-radius: 15px 50px 30px 5px;
 }
 
 h1, h2, h3, h4, h5, h6 {
   margin:0;
   padding:0;
 }
+
+.navbar{
+  background: image_url('darkness.png');
+  color: white;
+  text-shadow: 2px 2px 4px #000000;
+  box-shadow: 0px 1px 3px #2a2a2a;
+}
+
