--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -1,14 +1,20 @@
 @import "bootstrap";
+@import url('https://fonts.googleapis.com/css?family=Acme|Black+Han+Sans|PT+Serif');
 
 body{
-  background: image_url('funky-lines.png');
+  background: image_url('yelpBackground.jpg');
   font-family: Frutiger, "Frutiger Linotype", Univers, Calibri, "Gill Sans", "Gill Sans MT", "Myriad Pro", Myriad, "DejaVu Sans Condensed", "Liberation Sans", "Nimbus Sans L", Tahoma, Geneva, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  min-width: 1020px;
+  background-position: 50%;
+  background-size: cover;
+  padding-top: 2px;
+  height: 570px;
 }
 .booyah-box {
   -moz-box-shadow: 1px 1px 2px 0 #d0d0d0;
   -webkit-box-shadow: 1px 1px 2px 0 #d0d0d0;
   box-shadow: 1px 1px 2px 0 #d0d0d0;
-  background: image_url('food.png');
+  background: image_url('');
   border: 1px solid #ccc;
   border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
   margin-top: 10px;
@@ -20,6 +26,8 @@ body{
 h1, h2, h3, h4, h5, h6 {
   margin:0;
   padding:0;
+  font-family: 'PT Serif', serif;
+  color: white;
 }
 
 .navbar{
@@ -29,3 +37,21 @@ h1, h2, h3, h4, h5, h6 {
   box-shadow: 0px 1px 3px #2a2a2a;
 }
 
+.navbar-inverse .navbar-brand {
+  color: #F2B713;
+  font-family: Frutiger, "Frutiger Linotype", Univers, Calibri, "Gill Sans", "Gill Sans MT", "Myriad Pro", Myriad, "DejaVu Sans Condensed", "Liberation Sans", "Nimbus Sans L", Tahoma, Geneva, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: 600;
+  letter-spacing: -0.3px;
+  font-family: 'Black Han Sans', sans-serif;
+  font-size:26px;
+}
+
+p{
+  font-family: 'Acme', sans-serif;
+  color: white;
+}
+i{
+  font-family:'fira_sansbook';
+  color: white;
+  font-size:26px;
+}
