--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -1,6 +1,15 @@
 @import "bootstrap";
 @import url('https://fonts.googleapis.com/css?family=Acme|Black+Han+Sans|PT+Serif');
 
+body{
+  background: image_url('funky-lines.png');
+  font-family: Frutiger, "Frutiger Linotype", Univers, Calibri, "Gill Sans", "Gill Sans MT", "Myriad Pro", Myriad, "DejaVu Sans Condensed", "Liberation Sans", "Nimbus Sans L", Tahoma, Geneva, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  min-width: 1020px;
+  background-position: 50%;
+  background-size: cover;
+  padding-top: 2px;
+  height: 570px;
+}
 
 .booyah-box {
   -moz-box-shadow: 1px 1px 2px 0 #d0d0d0;
@@ -19,17 +28,9 @@ h1, h2, h3, h4, h5, h6 {
   margin:0;
   padding:0;
   font-family: 'PT Serif', serif;
-  color: white;
+  color: black;
 }
-body{
-  background: image_url('yelpBackground.jpg');
-  font-family: Frutiger, "Frutiger Linotype", Univers, Calibri, "Gill Sans", "Gill Sans MT", "Myriad Pro", Myriad, "DejaVu Sans Condensed", "Liberation Sans", "Nimbus Sans L", Tahoma, Geneva, "Helvetica Neue", Helvetica, Arial, sans-serif;
-  min-width: 1020px;
-  background-position: 50%;
-  background-size: cover;
-  padding-top: 2px;
-  height: 570px;
-}
+
 .navbar{
   background: image_url('darkness.png');
   color: white;
@@ -48,10 +49,57 @@ body{
 
 p{
   font-family: 'Acme', sans-serif;
-  color: white;
+  color: black;
 }
 i{
   font-family:'fira_sansbook';
-  color: white;
+  color: black;
   font-size:26px;
 }
+
+
+
+.pagination {
+  background: none;
+  cursor: default;
+  height: 22px;
+  a, span, em {
+    padding: 0.2em 0.5em;
+    display: block;
+    float: left;
+    margin-right: 1px;
+  }
+  .disabled {
+    display: none;
+  }
+  .current {
+    font-style: normal;
+    font-weight: bold;
+    background: #2e6ab1;
+    color: white;
+    border: 1px solid #2e6ab1;
+  }
+  a {
+    text-decoration: none;
+    color: #105cb6;
+    border: 1px solid #9aafe5;
+    &:hover, &:focus {
+      color: #000033;
+      border-color: #000033;
+    }
+  }
+  .page_info {
+    background: #2e6ab1;
+    color: white;
+    padding: 0.4em 0.6em;
+    width: 22em;
+    margin-bottom: 0.3em;
+    text-align: center;
+    b {
+      color: #000033;
+      background: #2e6ab1 + 60;
+      padding: 0.1em 0.25em;
+    }
+  }
+}
+
