--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,8 +1,10 @@
+<h1>Pizza Restaurants</h1>
 
+<%= will_paginate @places %>
 
 <% @places.each do |place| %>
   <div class="booyah-box col-10 offset-1">
-    <h1><%= place.name %></h1><br />
+    <h1> <%= place.id %>:<%= place.name %></h1><br />
     <i><%= place.address %></i><br />
     <p><%= place.description %></p><br />
   </div>
