--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -1,4 +1,5 @@
 @import "bootstrap";
+@import "font-awesome";
 @import url('https://fonts.googleapis.com/css?family=Acme|Black+Han+Sans|PT+Serif');
 
 body{
@@ -32,7 +33,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .navbar{
-  background: image_url('darkness.png');
+  background: image_url('funky-lines.png');
   color: white;
   text-shadow: 2px 2px 4px #000000;
   box-shadow: 0px 1px 3px #2a2a2a;
