working on Nomster hover issue

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,3 +12,13 @@
  *
  */
 @import "bootstrap";
+
+/* global */
+@import "./global/fonts.scss";
+@import "./global/master.scss";
+
+
+/* modules */
+@import "./modules/places.scss";
+
+
