--- a/app/assets/stylesheets/global/master.scss
+++ b/app/assets/stylesheets/global/master.scss
@@ -40,12 +40,14 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .navbar-inverse .navbar-brand {
-  color: #F2B713;
-  font-family: Frutiger, "Frutiger Linotype", Univers, Calibri, "Gill Sans", "Gill Sans MT", "Myriad Pro", Myriad, "DejaVu Sans Condensed", "Liberation Sans", "Nimbus Sans L", Tahoma, Geneva, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: #F2B713 !important;
+  font-family: Frutiger, "Frutiger Linotype", Univers, Calibri, "Gill Sans", "Gill Sans MT", "Myriad Pro", Myriad, "DejaVu Sans Condensed", "Liberation Sans", "Nimbus Sans L", Tahoma, Geneva, "Helvetica Neue", Helvetica, Arial, sans-serif !important;
   font-weight: 600;
   letter-spacing: -0.3px;
   font-family: 'Black Han Sans', sans-serif;
   font-size:26px;
+
+  &:hover{ color: white !important;}
 }
 
 p{
