lesson 22-add edit form

--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,8 +1,11 @@
 <h1>Welcome to the show page</h1>
 
 <div class="booyah-box col-10 offset-1">
-  <h1><%= @place.id %>:<%= @place.name %></h1>
+  <h1><%= @place.id %>:<%= @place.name %></h1><div class="float-right">
+    <%= link_to 'Edit', edit_place_path(@place), class: 'btn btn-primary' %>
+  </div>
   <i><%= @place.address %></i>
   <br/><br/>
   <p><%= @place.description %></p>
+   
 </div>
