--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -3,9 +3,10 @@
 <div class="booyah-box col-10 offset-1">
   <h1><%= @place.id %>:<%= @place.name %></h1><div class="float-right">
     <%= link_to 'Edit', edit_place_path(@place), class: 'btn btn-primary' %>
+    <%= link_to 'Destroy', place_path(@place), method: :delete, data: {confirm: 'Are you sure you want to delete this?'},class: 'btn btn-danger' %>
   </div>
   <i><%= @place.address %></i>
   <br/><br/>
   <p><%= @place.description %></p>
-   
+
 </div>
