--- a/app/assets/stylesheets/global/master.scss
+++ b/app/assets/stylesheets/global/master.scss
@@ -59,8 +59,9 @@ i{
   color: black;
   font-size:26px;
 }
-
-
+#map {
+    height: 300px;
+  }
 
 .pagination {
   background: none;
@@ -80,12 +81,12 @@ i{
     font-weight: bold;
     background: #2e6ab1;
     color: white;
-    border: 1px solid #2e6ab1;
+    border: none;
   }
   a {
     text-decoration: none;
     color: #105cb6;
-    border: 1px solid #9aafe5;
+    border: none;
     &:hover, &:focus {
       color: #000033;
       border-color: #000033;
