--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -10,5 +10,43 @@
   <i><%= @place.address %></i>
   <br/><br/>
   <p><%= @place.description %></p>
+<style>
+    html, body {
+      height: 100%;
+      margin: 0;
+      padding: 0;
+    }
+    
+  </style>
+  </head>
+  <body>
+  <div id="map"></div>
+  <% if @place.latitude.present? && @place.longitude.present? %>
+
+  <script>
+
+    function initMap() {
+      var myLatLng = {lat: <%= @place.latitude %>, lng: <%= @place.longitude %>};
+
+      var map = new google.maps.Map(document.getElementById('map'), {
+        zoom: 12,
+        center: myLatLng
+      });
+
+      var marker = new google.maps.Marker({
+        position: myLatLng,
+        map: map,
+        title: 'Hello World!'
+      });
+    }
+  </script>
+
+  <script async defer
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBPdUG9lQMBErKzZA7nBn_2RjZ9b93M5Ws&callback=initMap">
+  </script>
+
+  <div id="map"></div>
+  <% end %>
+<br />
 
 </div>
