lesson 35-added a dropdown for rating and dictionary for rating

--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -54,8 +54,8 @@
 <div class="booyah-box col-10 offset-1">
 <div class="clear"></div>
 <%= simple_form_for @comment, url: place_comments_path(@place) do |f| %>
-  <%= f.input :message %>
-  <%= f.input :rating %>
+   <%= f.input :message %>
+   <%= f.input :rating, as: :select, collection: Comment::RATINGS %>
   <%= f.submit "Add a Comment", class: 'btn btn-primary' %>
 <% end %>
 </div>
@@ -65,7 +65,9 @@
 <% @place.comments.each do |comment| %>
   <div>
     <blockquote>
-      <b><%= comment.rating %></b> -
+      <% if comment.humanized_rating.present? %>
+        *<b><%= comment.humanized_rating %></b> -
+      <% end %> <br>
         <%= comment.message %>
       Commented by:<small><%= comment.user.email %></small>
     </blockquote>
