--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -45,21 +45,10 @@
   src="https://maps.googleapis.com/maps/api/js?key=AIzaSyACx2362FKzdwTldQZ0xpym6gJ0kS9e6ng&callback=initMap">
   </script>
 
-  <div id="map"></div>
   <% end %>
 <br />
 
 </div>
-
-<div class="booyah-box col-10 offset-1">
-
-
-</div>
-
-<!-- Button trigger modal -->
-<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
-  Launch demo modal
-</button>
 
 <!-- Modal -->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -86,10 +75,17 @@
     </div>
   </div>
 </div>
-<h1>Comments</h1>
-
+<div class="col-10 offset-1">
+<h1 class="float-left">Comments</h1>
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary btn-lg float-right" data-toggle="modal" data-target="#myModal">
+  Add a comment
+</button>
+</div>
+<div class="clear"></div>
+<div class="row">
 <% @place.comments.each do |comment| %>
-  <div>
+  <div class="col-12 col-sm-6">
     <blockquote>
       <% if comment.humanized_rating.present? %>
         *<b><%= comment.humanized_rating %></b> -
@@ -99,3 +95,4 @@
     </blockquote>
   </div>
 <% end %>
+</div>
