--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -24,6 +24,15 @@
       </blockquote>
     </div>
   <% end %>
+
+
+  <% if place.photos.present? %>
+    <div class="col-12">
+      <blockquote>
+       Photos:<%= place.photos.all %>
+      </blockquote>
+    </div>
+  <% end %>
   </div>
 
   <hr />
