Lesson 40 email html and text

--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -29,7 +29,7 @@
   <% if place.photos.present? %>
     <div class="col-12">
       <blockquote>
-       Photos:<%= place.photos.all %>
+       Photos:  
       </blockquote>
     </div>
   <% end %>
