--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,7 +1,8 @@
 <h1>Welcome to the show page</h1>
 
 <div class="booyah-box col-10 offset-1">
-  <h1><%= @place.id %>:<%= @place.name %></h1><div class="float-right">
+  <h1><%= @place.id %>:<%= @place.name %></h1>
+  <div class="float-right">
     <% if current_user && current_user == @place.user %>
     <%= link_to 'Edit', edit_place_path(@place), class: 'btn btn-primary' %>
       <%= link_to 'Destroy', place_path(@place), method: :delete, data: {confirm: 'Are you sure you want to delete this?'}, class: 'btn btn-danger' %>
@@ -50,7 +51,7 @@
 
 </div>
 
-<!-- Modal -->
+<!-- Modal Comment-->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
@@ -77,11 +78,12 @@
 </div>
 <div class="col-10 offset-1">
 <h1 class="float-left">Comments</h1>
-<!-- Button trigger modal -->
+<!-- Comment Button trigger modal -->
 <button type="button" class="btn btn-primary btn-lg float-right" data-toggle="modal" data-target="#myModal">
   Add a comment
 </button>
 </div>
+
 <div class="clear"></div>
 <div class="row">
 <% @place.comments.each do |comment| %>
@@ -98,7 +100,7 @@
 </div>
 
 
-
+<!-- Modal Photo-->
 <div class="modal fade" id="myModalPhoto" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
@@ -112,6 +114,7 @@
        <%= simple_form_for @photo, url: place_photos_path(@place) do |f| %>
         <div class="modal-body">
           <%= f.input :caption %>
+          <%= f.input :picture %>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -124,10 +127,20 @@
 </div>
 <div class="col-10 offset-1">
 <h1 class="float-left">Photos</h1>
-<!-- Button trigger modal -->
+<!-- Photo Button trigger modal -->
 <button type="button" class="btn btn-primary btn-lg float-right" data-toggle="modal" data-target="#myModalPhoto">
   Add a photo
 </button>
 </div>
+
 <div class="clear"></div>
 <div class="row">
+
+  <div class="col-12 col-sm-6">
+      <% @place.photos.each do |photo| %>
+      <%= image_tag photo.picture.url %>
+      <%= photo.caption %>
+      <% end %>
+  </div>
+
+</div>
