--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -10,19 +10,19 @@
   </ol>
   <div class="carousel-inner" role="listbox">
     <div class="carousel-item active">
-      <%= image_tag 'thai-foods.jpg', class: 'd-block img-fluid' %>
+      <%= image_tag 'thai-foods.jpg', class: 'img-fluid' %>
         <div class="carousel-caption d-none d-md-block">
           <h3>Find the best Thai places</h3>
         </div>
     </div>
     <div class="carousel-item">
-      <%= image_tag 'hamburgers.jpg', class: 'd-block img-fluid' %>
+      <%= image_tag 'hamburgers.jpg', class: 'img-fluid' %>
       <div class="carousel-caption d-none d-md-block">
           <h3>Looking for hamburgers?</h3>
       </div>
     </div>
     <div class="carousel-item">
-      <%= image_tag 'indianfood.jpg', class: 'd-block img-fluid' %>
+      <%= image_tag 'indianfood.jpg', class: 'img-fluid' %>
       <div class="carousel-caption d-none d-md-block">
           <h3>Looking for Indian food?</h3>
       </div>
