--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,14 @@
 <h1>User Dashboard</h1>
+
+<br/>
+<h1><%= @user.email %></h1>
+<br/><br/>
+
+<h3>Member Since: <%= @user.created_at.strftime("%B  %d, %Y") %></h3>
+
+<br/>
+<h4><%= @user.comments.count %> total comments</h4>
+
+<br/><br/>
+
+<h4><%= @user.comments.where(rating: '5_stars').count %> total 5 star reviews</h4>
